--- a/src/routes/docs/components/overview/index.mdx
+++ b/src/routes/docs/components/overview/index.mdx
@@ -12,8 +12,8 @@ contributors:
 Les composants sont les blocs de construction de base des applications Qwik. Les composants Qwik sont uniques dans le sens où :
 
 - Les composants Qwik sont automatiquement décomposés en morceaux avec un chargement différé par l'Optimiseur. (Voir la section Optimiseur)
-- Sont [resumables](../../concepts/resumable/index.mdx). (Un composant peut être créé sur un serveur et continuer son exécution sur le client). (Voir la section Résumable)
-- Peut effectuer un rendu indépendamment des autres composants de la page. (Voir la section Le rendu)
+- Ils sont [resumables](../../concepts/resumable/index.mdx). (Un composant peut être créé sur un serveur et continuer son exécution sur le client). (Voir la section Résumable)
+- Ils peuvent effectuer un rendu indépendamment des autres composants de la page. (Voir la section Le rendu)
 
 ## `component$()`
 
