--- a/src/routes/docs/think-qwik/index.mdx
+++ b/src/routes/docs/think-qwik/index.mdx
@@ -10,7 +10,7 @@ contributors:
 
 Qwik est très similaire aux autres frameworks web sur le plan général. Qwik est un framework qui rend un arbre de composants aboutissant à une application interactive.
 
-La partie unique de Qwik n'est pas dans ce qu'il fait mais dans la façon dont il atteint ses objectifs. L'objectif de Qwik est d'avoir des applications instantanées, même sur les appareils mobiles. Qwik atteint cet objectif grâce à deux stratégies principales :
+La particularité de Qwik ne réside pas dans ce qu'il fait mais dans la manière dont il atteint ses objectifs. L'objectif de Qwik est d'avoir des applications instantanées, même sur les appareils mobiles. Qwik atteint cet objectif grâce à deux stratégies principales :
 
 1. Retarder l'exécution et le chargement du JavaScript aussi longtemps que possible.
 2. Sérialiser l'état d'exécution de l'application et du framework sur le serveur et le reprendre sur le client.
@@ -23,7 +23,7 @@ Le but de Qwik est de charger et exécuter que le strict minimum de l'applicatio
 
 Les applications Qwik démarrent rapidement car il y a une quantité minimale de code JavaScript à exécuter. (Dans sa plus simple expression, une application Qwik n'a besoin que d'environ 1KB de JavaScript pour devenir interactive).
 
-En retardant considérablement le chargement et l'exécution de l'application, Qwik peut fournir des performances de démarrage quasi instantanées que les générations actuelles de frameworks web ne peuvent pas égaler.
+En retardant considérablement le chargement et l'exécution de l'application, Qwik peut fournir des performances de démarrage quasi instantanées que les frameworks web de génération actuelle de ne peuvent pas égaler.
 
 Qwik est rapide non pas parce qu'il utilise des algorithmes intelligents mais parce qu'il est conçu de telle manière que la plupart du JavaScript n'a jamais besoin d'être chargé ou exécuté. Sa vitesse vient du fait qu'il ne fait pas certaines choses (comme l'hydratation) que les autres frameworks doivent faire.
 
