--- a/src/routes/qwikcity/integrations/tailwind/index.mdx
+++ b/src/routes/qwikcity/integrations/tailwind/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Qwik City et Tailwind
-keywords: styles, stylingkeywords: styles, styling
+keywords: styles, styling
 contributors:
   - manucorporat
   - leifermendez
@@ -8,9 +8,9 @@ contributors:
 
 # Tailwind
 
-Tailwind est un framework CSS qui nous fournit des classes utilitaires à usage unique qui sont pour la plupart opiniâtre,
-et qui nous aident à concevoir nos pages Web à partir de nos fichiers de balisage ou de fichiers
-balisage ou des fichiers .js/.jsx/.ts/.tsx/.mdx. [Site web de Tailwindcss](https://tailwindcss.com/)
+Tailwind est un framework CSS qui nous fournit des classes utilitaires à usage unique qui sont pour
+la plupart opiniâtre, et qui nous aident à concevoir nos pages Web à partir de nos balisages ou de 
+nos fichiers .js/.jsx/.ts/.tsx/.mdx. [Site web de Tailwindcss](https://tailwindcss.com/)
 
 ## Utilisation
 
@@ -34,7 +34,7 @@ dans votre `global.css`.
 
 ```css
 
-# global.css file
+# Fichier global.css
 
 @tailwind base;
 @tailwind components;
