--- a/src/routes/qwikcity/adaptors/vercel-edge/index.mdx
+++ b/src/routes/qwikcity/adaptors/vercel-edge/index.mdx
@@ -1,24 +1,24 @@
 ---
-title: Qwik City - Vercel Edge Adaptor and Middleware
+title: Qwik City - Adaptateur et middleware de Vercel Edge
 contributors:
   - adamdbradley
 ---
 
-# Vercel Edge Adaptor
+# Adaptateur de Vercel Edge
 
-Qwik City Vercel Edge adaptor allows you to connect Qwik City to [Vercel Edge Functions](https://vercel.com/docs/concepts/functions/edge-functions).
+L'adaptateur de Qwik City pour Vercel Edge vous permet de connecter Qwik City aux [Fonctions de Vercel Edge](https://vercel.com/docs/concepts/functions/edge-functions).
 
 ## Installation
 
-To integrate the `vercel-edge` adaptor, use the `add` command:
+Pour intégrer l'adaptateur `vercel-edge`, utilisez la commande `add` :
 
 ```shell
 npm run qwik add vercel-edge
 ```
 
-> It will automatically install the required dependencies, including the [Vercel CLI](https://vercel.com/docs/cli).
+> Il installera automatiquement les dépendances requises, y compris le [CLI de Vercel](https://vercel.com/docs/cli).
 
-The adaptor will add a new `vite.config.ts` within the `adaptors/` directory, and a new entry file will be created, such as:
+L'adaptateur ajoutera un nouveau `vite.config.ts` dans le répertoire `adaptors/`, et un nouveau fichier d'entrée sera créé, comme suit :
 
 ```
 └── adaptors/
@@ -28,39 +28,39 @@ The adaptor will add a new `vite.config.ts` within the `adaptors/` directory, an
     └── entry.vercel-edge.tsx
 ```
 
-Additionally, within the `package.json`, the `build.server` script will be updated with the Vercel Edge build.
+De plus, dans le `package.json`, le script `build.server` sera mis à jour avec le build de Vercel Edge.
 
-## Production build
+## Construction de la production
 
-To build the application for production, use the `build` command, this command will automatically run `npm run build.server` and `npm run build.client`:
+Pour construire l'application pour la production, utilisez la commande `build`, cette commande lancera automatiquement `npm run build.server` et `npm run build.client`:
 
 ```shell
 npm run build
 ```
 
-[Read the full guide here](https://github.com/BuilderIO/qwik/blob/main/starters/adaptors/Vercel-edge/README.md)
+[Lisez le guide complet ici](https://github.com/BuilderIO/qwik/blob/main/starters/adaptors/Vercel-edge/README.md)
 
-## Dev deploy
+## Déploiement pour le dev
 
-To deploy the application for development:
+Pour déployer l'application pour le développement :
 
 ```shell
 npm run deploy
 ```
 
-Notice that you might need a [Vercel account](https://docs.Vercel.com/get-started/) in order to complete this step!
+Notez que vous pouvez avoir besoin d'un [compte Vercel](https://docs.Vercel.com/get-started/) afin de compléter cette étape !
 
-## Production deploy
+## Déploiement de la production
 
-After installing the integration using `npm run qwik add`. The project is ready to be deployed to Vercel. However, you will need to create a git repository and push the code to it.
+Après avoir installé l'intégration en utilisant `npm run qwik add`. Le projet est prêt à être déployé sur Vercel. Cependant, vous devrez créer un dépôt git et y pousser le code.
 
-Please refer to the Vercel docs for more information on how to deploy your site: [Vercel docs](https://vercel.com/docs/concepts/deployments/overview)
+Veuillez vous référer à la documentation de Vercel pour plus d'informations sur la façon de déployer votre site : [docs de Vercel](https://vercel.com/docs/concepts/deployments/overview)
 
-## Advanced
+## Avancé
 
-### Vercel Edge Entry Middleware
+### Middleware d'entrée de Vercel Edge
 
-When the `vercel-edge` adaptor is added, a new entry file will be created at `src/entry.vercel-edge.tsx`. Below is an example of using the built-in middleware within the entry file.
+Lorsque l'adaptateur `vercel-edge` est ajouté, un nouveau fichier d'entrée sera créé `src/entry.vercel-edge.tsx`. Vous trouverez ci-dessous un exemple d'utilisation du middleware intégré dans le fichier d'entrée.
 
 ```tsx
 // src/entry.vercel-edge.tsx
@@ -71,12 +71,12 @@ import render from './entry.ssr';
 export default createQwikCity({ render, qwikCityPlan });
 ```
 
-The compiled middleware will be built in the `.vercel/output` directory.
+Le middleware compilé sera construit dans le répertoire `.vercel/output`.
 
-### Vercel Edge Functions
+### Fonctions de Vercel Edge
 
-[Vercel Edge Functions](https://vercel.com/docs/concepts/functions/edge-functions) are deployed globally by default on Vercel's Edge Network and enable you to move server-side logic to the Edge, close to your visitor's origin.
+Les [Fonctions de Vercel Edge] (https://vercel.com/docs/concepts/functions/edge-functions) sont déployées globalement par défaut sur le réseau de Vercel Edge et vous permettent de déplacer la logique côté serveur vers le Edge, à proximité de l'origine de votre visiteur.
 
-Edge Functions use the Vercel Edge Runtime, which is built on the same high-performance V8 JavaScript and WebAssembly engine that is used by the Chrome browser. By taking advantage of this small runtime, Edge Functions can have faster cold boots and higher scalability than Serverless Functions.
+Les fonctions Edge utilisent le moteur d'exécution Vercel Edge, qui repose sur le même moteur de haute performance V8 JavaScript et WebAssembly que celui utilisé par le navigateur Chrome. En tirant parti de ce petit moteur d'exécution, les fonctions Edge peuvent avoir des démarrages à froid plus rapides et une plus grande évolutivité que les fonctions Serverless.
 
-Edge Functions run after the cache, and can both cache and return responses.
+Les fonctions Edge s'exécutent après le cache, et peuvent à la fois mettre en cache et renvoyer des réponses.
