--- a/src/routes/docs/getting-started/index.mdx
+++ b/src/routes/docs/getting-started/index.mdx
@@ -100,16 +100,16 @@ Il construira votre application et le [serveur de prévisualisation Vite](https:
 
 ## Déploiement
 
-Il est très facile de déployer votre application Qwik vers le cloud, en tant que fichiers statiques, ou votre propre serveur.
+Il est très facile de déployer votre application Qwik vers le cloud, en tant que fichiers statiques, ou sur votre propre serveur.
 
 Veuillez consulter la section [déploiement](/qwikcity/adaptors/overview/index.mdx) pour plus de détails.
 
 ## Autres intégrations
 
-Qwik est conçu pour être intégré avec d'autres outils. Comme `vitest`, `tailwind`, `partytown`... lancez la commande suivante pour voir la liste des intégrations disponibles :
+Qwik est conçu pour être intégré avec d'autres outils. Comme `vitest`, `tailwind`, `partytown`, ... Lancez la commande suivante pour voir la liste des intégrations disponibles :
 
 ```shell
 npm run qwik add
 ```
 
-et n'oubliez pas de consulter la section [intégrations](/qwikcity/integrations/overview/index.mdx) pour plus de détails.
+Et n'oubliez pas de consulter la section [intégrations](/qwikcity/integrations/overview/index.mdx) pour plus de détails.
