--- a/src/routes/qwikcity/data/retrieve/index.mdx
+++ b/src/routes/qwikcity/data/retrieve/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: Qwik City - Récupération des données
+title: Qwik City - Récupérer les données
 contributors:
   - adamdbradley
 ---
 
-# Récupération des données
+# Récupérer les données
 
 Implémentons `https://example.com/product/abc123` afin de pouvoir récupérer les détails d'un produit.
 
