--- a/src/routes/integrations/integration/overview/index.mdx
+++ b/src/routes/integrations/integration/overview/index.mdx
@@ -8,7 +8,7 @@ Qwik est livré avec des intégrations prêt à l'emploi pour faciliter la conne
 
 Une fois que vous avez créé une application Qwik City, exécutez la commande suivante pour ajouter de nouvelles intégrations :
 
-``shell
+```shell
 npm run qwik add
 ```
 
