--- a/src/routes/integrations/integration/playwright/index.mdx
+++ b/src/routes/integrations/integration/playwright/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Qwik City and Playwright
+title: Qwik City et Playwright
 keywords: e2e, testing
 contributors:
   - manucorporat
@@ -8,17 +8,17 @@ contributors:
 
 # Playwright
 
-Playwright enables reliable end-to-end testing for modern web apps supporting all modern rendering engines and works cross-platform. [Playwright Website](https://playwright.dev/).
+Playwright permet d'effectuer des tests fiables de bout en bout pour les applications Web modernes en prenant en charge tous les moteurs de rendu modernes et en fonctionnant sur plusieurs plateformes. [Site Web de Playwright] (https://playwright.dev/).
 
-## Usage
+## Utilisation
 
-You can add Playwright easily by using the following Qwik starter script:
+Vous pouvez ajouter Playwright facilement en utilisant le script de démarrage Qwik suivant :
 
 ```shell
 npm run qwik add playwright
 ```
 
-The previous command adds playwright to your dependencies, appends a `test.e2e` command in your `package.json` scripts section and creates a default configuration within the `playwright.config.ts` file on the application root level.
-It also adds a new file within a newly created `tests` folder called `example.spec.ts` which contains some simple test cases.
+La commande précédente ajoute playwright à vos dépendances, ajoute une commande `test.e2e` dans votre section de scripts `package.json` et crée une configuration par défaut dans le fichier `playwright.config.ts` au niveau de la racine de l'application.
+Il ajoute également un nouveau fichier dans un dossier `tests` nouvellement créé appelé `example.spec.ts` qui contient quelques cas de test simples.
 
-For further reference, please check the [Playwright documentation](https://playwright.dev/docs/intro).
+Pour de plus amples informations, veuillez consulter la [documentation Playwright](https://playwright.dev/docs/intro).
