Translate in french 0014

--- a/src/routes/community/projects/index.mdx
+++ b/src/routes/community/projects/index.mdx
@@ -18,7 +18,7 @@ contributors:
 #### Intégrations
 
 - <a href="https://github.com/qwikifiers/qwik-nx" target="_blank">
-    Qwik NX - A plugin for nx (the monorepo management tool)
+    Qwik NX - Un plugin pour nx (l'outil de gestion des monoreps)
   </a>
 - <a href="https://github.com/wmertens/styled-vanilla-extract" target="_blank">
     Qwik + Vanilla Extract
@@ -30,4 +30,4 @@ contributors:
     Qwik VS Code snippets
   </a>
 
-If you have more projects to add, please [edit this page](https://github.com/BuilderIO/qwik/edit/main/packages/docs/src/routes/community/projects/index.mdx)
+Si vous avez d'autres projets à ajouter, veuillez [modifier cette page](https://github.com/BuilderIO/qwik/edit/main/packages/docs/src/routes/community/projects/index.mdx).
