--- a/src/routes/community/values/index.mdx
+++ b/src/routes/community/values/index.mdx
@@ -1,66 +1,66 @@
 ---
-title: Qwik Community Values
+title: Valeurs de la communauté Qwik
 contributors:
   - shairez
 ---
 
-## Qwik Community Values:
+## Valeurs de la communauté Qwik :
 
 ---
 
-#### ✅ All questions are good questions.
+#### ✅ Toutes les questions sont bonnes.
 
-There is no such thing as _" that's a noob question"_ in our community.
-We value our community members for their patience, helpfulness and welcoming attitude towards newcomers that make everyone feel at home.
-So always feel comfortable asking any question that comes to mind about anything Qwik or JS related.
-
----
-
-#### ✅ Be respectful and inclusive
-
-We are a global community where members join from different cultures and backgrounds and have different styles of communication.
-Because of that we'd like to ask you to mind how you phrase your questions / answers / discussion points.
-As text has no tone, it's important to be extra mindful on how we communicate and appreciate each other's attempt to help.  
-It's totally OK not to agree with others as long as we respect each other at the same time.
-
-**Always think**: "How would I like to be treated?"" and treat others the same way.
+Il n'existe pas de "question de débutant" dans notre communauté.
+Nous apprécions les membres de notre communauté pour leur patience, leur serviabilité et leur attitude accueillante envers les nouveaux arrivants qui font que chacun se sent chez lui.
+Alors n'hésitez pas à poser toutes les questions qui vous viennent à l'esprit sur tout ce qui concerne Qwik ou JS.
 
 ---
 
-#### ✅ Support and encourage each other
+#### ✅ Soyez respectueux et ouvert
 
-We like to praise members in our community for their efforts.
-If you see anyone sharing a Qwik related project, blog post, video, or any "win"…
-give them a 👏 or 🚀 or any other emoji or kind words that will brighten their day.
-If you see someone struggling, give them words of encouragement and if possible,
-help them out. Remember - teaching is the best way to learn, plus, it's good karma 😉
+Nous sommes une communauté globale dont les membres proviennent de cultures et de milieux différents et ont des styles de communication différents.
+C'est pourquoi nous vous demandons de faire attention à la façon dont vous formulez vos questions, vos réponses et vos points de discussion.
+Comme le texte n'a pas de ton, il est important d'être très attentif à la façon dont nous communiquons et d'apprécier la tentative d'aide de l'autre.  
+Il est tout à fait normal de ne pas être d'accord avec les autres, à condition de se respecter mutuellement.
 
----
-
-#### ✅ Follow the boy/girl scout rule:
-
-_"Always leave the place better than you found it."_
-
-If you see anything that could be better - please open up a PR or an issue or reach out to us.
-
-**For example:** think something in the docs doesn't make sense?
-please don't close the page, but instead - click the "Edit this page" link and try to improve it.
-You'll be doing a huge favor for the rest of us, so thank you!
+**Toujours se demander** : « Comment aimerais-je être traité ? » et traitez les autres de la même façon.
 
 ---
 
-#### ✅ Respect other solutions
+#### ✅ Se soutenir et s'encourager mutuellement
 
-We are all in this JavaScript game together and there's a lot to learn from each other.
-Without other frameworks / solutions innovation would have stopped and we couldn't be where we are today.
-
-That's why we embrace the entire JS ecosystem and welcome collaboration with all the other frameworks and libraries.
-That's also why we believe that Qwik members should feel free to share their love for other solutions without the fear of being criticized for their choices.
-Our community is a safe environment for ALL developers.
+Nous aimons féliciter les membres de notre communauté pour leurs efforts.
+Si vous voyez quelqu'un partager un projet lié à Qwik, un article de blog, une vidéo, ou toute autre "victoire"...
+donnez-lui un 👏 ou 🚀 ou tout autre emoji ou des mots gentils qui égayeront sa journée.
+Si vous voyez quelqu'un en difficulté, donnez-lui des mots d'encouragement et, si possible,
+aidez-le à s'en sortir. N'oubliez pas - enseigner est la meilleure façon d'apprendre, en plus, c'est un bon karma 😉 .
 
 ---
 
-#### ✅ Keep it fun
+#### ✅ Suivez la règle des boy-scouts :
 
-We like to keep things light and fun, so you might see silly emojis, contests,
-commit messages etc. Feel free to join the silliness! 🤪😊
+_« Toujours laisser l'endroit en meilleur état que vous ne l'avez trouvé. »_
+
+Si vous voyez quelque chose qui pourrait être amélioré, n'hésitez pas à ouvrir une PR ou une issue ou à nous contacter.
+
+**Par exemple :** Vous pensez que quelque chose dans la documentation n'a pas de sens ?
+Ne fermez pas la page, mais cliquez plutôt sur le lien « Modifier cette page » et essayez de l'améliorer.
+Vous nous rendrez un grand service à tous, alors merci !
+
+---
+
+#### ✅ Respectez les autres solutions
+
+Nous sommes tous ensemble dans ce jeu JavaScript et il y a beaucoup à apprendre les uns des autres.
+Sans les autres frameworks/solutions, l'innovation se serait arrêtée et nous ne pourrions pas être là où nous sommes aujourd'hui.
+
+C'est pourquoi nous embrassons l'ensemble de l'écosystème JS et accueillons favorablement la collaboration avec tous les autres frameworks et bibliothèques.
+C'est aussi pourquoi nous pensons que les membres de Qwik doivent se sentir libres de partager leur amour pour d'autres solutions sans craindre d'être critiqués pour leurs choix.
+Notre communauté est un environnement sûr pour TOUS les développeurs.
+
+---
+
+#### ✅ Restez fun
+
+Nous aimons garder les choses légères et fun, donc vous pourriez voir des émojis amusants, des concours,
+des messages d'engagement, etc. N'hésitez pas à vous joindre à la folie ! 🤪😊
