--- a/src/routes/qwikcity/action/index.mdx
+++ b/src/routes/qwikcity/action/index.mdx
@@ -6,9 +6,9 @@ contributors:
 
 # `action$()`
 
-Actions can be declared using the `action$()` function anywhere. Actions are similar to [loaders](/docs/qwik-city/loader$) but they are not executed during rendering. Instead, they are executed when called explicitly, ie they run after some user interaction, such as a click or a form submission.
+Les actions peuvent être déclarées en utilisant la fonction `action$()` n'importe où. Les actions sont similaires aux [loaders](/docs/qwik-city/loader$) mais elles ne sont pas exécutées pendant le rendu. Au lieu de cela, elles sont exécutées lorsqu'elles sont appelées explicitement, c'est-à-dire qu'elles sont exécutées après une interaction avec l'utilisateur, comme un clic ou la soumission d'un formulaire.
 
-Actions are referenced using the `.use()` method from within a Qwik Component. The `use()` method returns `ActionStore` object with methods to trigger the action and get its state.
+Les actions sont référencées en utilisant la méthode `.use()` à l'intérieur d'un composant Qwik. La méthode `use()` renvoie un objet `ActionStore` avec des méthodes pour déclencher l'action et obtenir son état.
 
 ```tsx
 // src/routes/layout.tsx
@@ -34,11 +34,11 @@ export default component$(() => {
 });
 ```
 
-> Since actions are not executed during rendering, they can have side effects such as writing to a database, or sending an email. An action only runs when called explicitly.
+> Comme les actions ne sont pas exécutées pendant le rendu, elles peuvent avoir des effets secondaires tels que l'écriture dans une base de données ou l'envoi d'un courriel. Une action ne s'exécute que lorsqu'elle est appelée explicitement.
 
-## Using actions with `<Form/>`
+## Utiliser des actions avec `<Form/>`
 
-The best way to trigger an action is by using the `<Form/>` component exported in `@builder.io/qwik-city`.
+La meilleure façon de déclencher une action est d'utiliser le composant `<Form/>` exporté dans `@builder.io/qwik-city`.
 
 ```tsx
 // src/routes/index.tsx
@@ -59,18 +59,18 @@ export default component$(() => {
   return (
     <Form action={action}>
       <input name="name" />
-      <button type="submit">Add user</button>
-      {action.value?.success && <div>User added successfully</div>}
+      <button type="submit">Ajouter un utilisateur</button>
+      {action.value?.success && <div>Utilisateur ajouté avec succès</div>}
     </Form>
   );
 });
 ```
 
-Under the hood, the `<Form/>` component uses a native HTML `<form>` element, so it will work without JavaScript. When JS is enabled, the `<Form/>` component will intercept the form submission and trigger the action in SPA mode, allowing to have a full SPA experience.
+Sous le capot, le composant `<Form/>` utilise un élément HTML natif `<form>`, il fonctionnera donc sans JavaScript. Lorsque JavaScript est activé, le composant `<Form/>` interceptera la soumission du formulaire et déclenchera l'action en mode SPA, permettant ainsi d'avoir une expérience SPA complète.
 
-## Using actions programatically
+## Utiliser les actions de façon programmée
 
-Actions can also be triggered programatically using the `action.run()` method, ie you dont need a `<Form/>` component, but you can trigger the action from a button click or any other event, just like you would do with a function.
+Les actions peuvent également être déclenchées par programme à l'aide de la méthode `action.run()`, c'est-à-dire que vous n'avez pas besoin d'un composant `<Form/>`, mais vous pouvez déclencher l'action à partir d'un clic sur un bouton ou de tout autre événement, tout comme vous le feriez avec une fonction.
 
 ```tsx
 // src/routes/index.tsx
@@ -96,19 +96,19 @@ export default component$(() => {
           console.log(value);
         }}
       >
-        Add user
+        Ajouter un utilisateur
       </button>
-      {action.value?.success && <div>User added successfully</div>}
+      {action.value?.success && <div>Utilisateur ajouté avec succès</div>}
     </div>
   );
 });
 ```
 
-In the example above, the `addUser` action is triggered when the user clicks the button. The `action.run()` method returns a `Promise` that resolves when the action is done.
+Dans l'exemple ci-dessus, l'action `addUser` est déclenchée lorsque l'utilisateur clique sur le bouton. La méthode `action.run()` renvoie un `Promise` qui se résout lorsque l'action est terminée.
 
-### Zod validation
+### Validation de Zod
 
-When submitting data to an action by default, the data is not validated.
+Lorsque vous soumettez des données à une action, par défaut, les données ne sont pas validées.
 
 ```tsx
 // src/routes/index.tsx
@@ -116,7 +116,7 @@ When submitting data to an action by default, the data is not validated.
 import { action$ } from '@builder.io/qwik-city';
 
 export const addUser = action$((user) => {
-  // `user` is typed Record<string, any>
+  // `user` est typé Record<string, any>
   const userID = db.users.add(user);
   return {
     success: true,
@@ -125,7 +125,7 @@ export const addUser = action$((user) => {
 });
 ```
 
-Fortunately, actions have first class support for [Zod](https://zod.dev/), a TypeScript-first data validation library. To use Zod, simply pass the Zod schema as the second argument to the `action$()` function.
+Heureusement, les actions bénéficient d'une prise en charge de première classe de [Zod](https://zod.dev/), une bibliothèque de validation de données orientée TypeScript. Pour utiliser Zod, il suffit de passer le schéma Zod comme deuxième argument à la fonction `action$()`.
 
 ```tsx
 // src/routes/index.tsx
@@ -134,7 +134,7 @@ import { action$, zod$, z } from '@builder.io/qwik-city';
 
 export const addUser = action$(
   (user) => {
-    // `user` is typed { name: string }
+    // `user` est typé { name: string }
     const userID = db.users.add(user);
     return {
       success: true,
@@ -147,14 +147,14 @@ export const addUser = action$(
 );
 ```
 
-When submitting data to an action, the data is validated against the Zod schema. If the data is invalid, the action will put the validation error in the `action.fail` property.
+Lorsque vous soumettez des données à une action, celles-ci sont validées par rapport au schéma de Zod. Si les données ne sont pas valides, l'action indique l'erreur de validation dans la propriété `action.fail`.
 
 ```tsx
 import { action$, Form } from '@builder.io/qwik-city';
 
 export const addUser = action$(
   (user) => {
-    // `user` is typed { name: string }
+    // `user` est typé { name: string }
     const userID = db.users.add(user);
     return {
       success: true,
@@ -172,29 +172,29 @@ export default component$(() => {
     <Form action={action}>
       <input name="name" />
       {action.fail?.fieldErrors.name && <div>{action.fail.message}</div>}
-      {action.value?.success && <div>User added successfully</div>}
-      <button type="submit">Add user</button>
+      {action.value?.success && <div>Utilisateur ajouté avec succès</div>}
+      <button type="submit">Ajouter un utilisateur</button>
     </Form>
   );
 });
 ```
 
-Please refer to the [Zod documentation](https://zod.dev/) for more information on how to use Zod schemas.
+Veuillez consulter la [documentation Zod](https://zod.dev/) pour plus d'informations sur l'utilisation des schémas Zod.
 
-## Action Failures
+## Échecs de l'action
 
-In order to return non-success values, the action must use the `fail()` method.
+Afin de récupérer les valeurs en échec, l'action doit utiliser la méthode `fail()`.
 
 ```tsx
 import { action$, Form } from '@builder.io/qwik-city';
 
 export const addUser = action$(
   (user, { fail }) => {
-    // `user` is typed { name: string }
+    // `user` est typé { name: string }
     const userID = db.users.add(user);
     if (!userID) {
       return fail(500, {
-        message: 'User could not be added',
+        message: 'L\'utilisateur n\'a pas pu être ajouté',
       });
     }
     return {
@@ -207,7 +207,7 @@ export const addUser = action$(
 );
 ```
 
-Failures are stored in the `action.value` property, just like the success value. However, the `action.value.failed` property is set to `true` when the action fails.
+Les échecs sont stockés dans la propriété `action.value`, tout comme la valeur de réussite. Toutefois, la propriété `action.value.failed` prend la valeur `true` lorsque l'action échoue.
 
 ```tsx
 export default component$(() => {
@@ -215,26 +215,26 @@ export default component$(() => {
   return (
     <Form action={action}>
       <input name="name" />
-      <button type="submit">Add user</button>
+      <button type="submit">Ajouter un utilisateur</button>
       {action.value?.failed && <div>{action.value.message}</div>}
-      {action.value?.userID && <div>User added successfully</div>}
+      {action.value?.userID && <div>Utilisateur ajouté avec succès</div>}
     </Form>
   );
 });
 ```
 
-Thanks to Typescript type discrimination, you can use the `action.value.failed` property to discriminate between success and failure.
+Grâce à la discrimination par type de Typescript, vous pouvez utiliser la propriété `action.value.failed` pour distinguer le succès de l'échec.
 
-## Previous form state
+## État précédent du formulaire
 
-When an action is triggered, the previous state is stored in the `action.formData` property. This is useful to display a loading state while the action is running.
+Lorsqu'une action est déclenchée, l'état précédent est stocké dans la propriété `action.formData`. Ceci est utile pour afficher un état de chargement pendant que l'action est en cours d'exécution.
 
 ```tsx
 import { action$, Form } from '@builder.io/qwik-city';
 
 export const useAddUser = action$(
   (user) => {
-    // `user` is typed { name: string }
+    // `user` est typé { name: string }
     const userID = db.users.add(user);
     return {
       userID,
@@ -250,12 +250,12 @@ export default component$(() => {
   return (
     <Form action={action}>
       <input name="name" value={action.formData?.get('name')} />
-      <button type="submit">Add user</button>
+      <button type="submit">Ajouter un utilisateur</button>
     </Form>
   );
 });
 ```
 
-The `action.formData` is specially useful as it allows to keep the form data filled by the user even on a page refresh, allowing to have a full SPA experience, even with JS disabled.
+Le `action.formData` est particulièrement utile car il permet de conserver les données du formulaire rempli par l'utilisateur même lors d'un rafraîchissement de la page, permettant ainsi d'avoir une expérience SPA complète, même avec le JS désactivé.
 
 ## Action
